# vmga

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
artifacts/vmga-dry-run/: dry_run_transcript.jsonl  evidence.jsonl
docs/: action_catalog.md  approval_signing_design.md  deployment_runbook.md  dsovs_readiness.md  evidence.md  evidence_integrity_design.md  gmail_backend_options.md  hermes_integration.md  openclaw_integration.md  release_checklist.md  roadmap.md  vmga_spec_v0.2.md
docs/plans/: 2026-06-10-001-feat-operator-readiness-plan.md
examples/: advisory_local.yaml  broker_local.yaml  hermes_vmga_plugin.yaml  openclaw_gateway_vmga.yaml
integrations/hermes/: __init__.py  plugin.yaml  schemas.py  tools.py
integrations/openclaw/: README.md  __init__.py  openclaw.plugin.json  package-lock.json  package.json  profile_adapter.py
schemas/: vmga_approval_v0.1.json  vmga_evidence_v0.1.json  vmga_proposal_v0.1.json
scripts/: build_vmga_evidence.py  verify_vmga_evidence.py  vmga_live_smoke.py  vmga_release_check.py
src/vmga/: __init__.py  approvals.py  broker.py  broker_contract.py  cli.py  evidence.py  evidence_integrity.py  executor.py  ledger.py  live_smoke.py  models.py  policy.py  (+6 more)
tests/: test_approval_signatures.py  test_evidence_integrity.py  test_gogcli_backend.py  test_integrations_static.py  test_posture_operative.py  test_release_checks.py  test_vmga_adapter.py  test_vmga_contract.py  test_vmga_live_smoke.py  test_vmga_operator_cli.py
(+6 files in other folders)
