[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmga"
version = "0.2.1"
description = "Vesta Mail Governance Adapter for agentic Gmail access"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sovereign Safety Labs" }
]
classifiers = [
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "cryptography>=42.0",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
broker = []
sqlite = []
gogcli = []

[project.scripts]
vmga-verify-evidence = "vmga.cli:verify_evidence_main"
vmga-approval-token = "vmga.cli:approval_token_main"
vmga-approval-sign = "vmga.cli:approval_sign_main"
vmga-operator = "vmga.cli:operator_main"
vmga-broker = "vmga.cli:broker_main"
vmga-live-smoke = "vmga.live_smoke:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning"
]
